--- a/package.json
+++ b/package.json
@@ -2,24 +2,32 @@
   "name": "d3bind",
   "version": "0.0.1",
   "description": "Observable data bindings for d3.js",
-  "keywords": ["d3", "observable"],
+  "keywords": [
+    "d3",
+    "observable"
+  ],
   "main": "build/d3bind.js",
   "author": "ggmod",
   "license": "ISC",
   "scripts": {
-    "prebublish": "gulp build"
+    "prebublish": "gulp build",
+    "test": "mocha --harmony-destructuring test/**/*.js"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
+    "chai": "^3.5.0",
+    "d3": "^3.5.0",
     "del": "^2.2.0",
     "exorcist": "^0.4.0",
     "gulp": "^3.9.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.1",
+    "jsdom": "^8.0.4",
+    "mocha": "^2.4.5",
     "tsify": "^0.13.2",
     "vinyl-source-stream": "^1.1.0"
   },
   "peerDependencies": {
-      "d3": "^3.5.0"
+    "d3": "^3.5.0"
   }
 }
