--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "d3",
     "observable"
   ],
-  "main": "build/d3bind.js",
+  "main": "build2/index.js",
+  "typings": "build2/index",
   "author": "ggmod",
   "license": "ISC",
   "scripts": {
@@ -25,6 +26,7 @@
     "jsdom": "^8.0.4",
     "mocha": "^2.4.5",
     "tsify": "^0.13.2",
+    "typescript": "^1.8.2",
     "vinyl-source-stream": "^1.1.0"
   },
   "peerDependencies": {
